feat: 스터디 자동 매칭 추천 로직 고도화